apps/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  rules:
  - host: keycloak.127.0.0.1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: keycloak
            port:
             number: 8080
  tls:
  - hosts:
      - keycloak.127.0.0.1.nip.io
    secretName: keycloak-tls
